<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_store">

    <fragment
        android:id="@+id/navigation_store"
        android:name="ru.miet.dormitory.ui.view.store.StoreFragment"
        android:label="@string/menu_title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="ru.miet.dormitory.ui.view.requests.RequestsFragment"
        android:label="@string/menu_title_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.miet.dormitory.ui.view.notifications.NotificationsFragment"
        android:label="@string/menu_title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
